--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.31 2009/09/18 16:29:46 ith Exp $
+% $Id: dbi.tex,v 1.32 2009/09/18 17:07:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.31 2009/09/18 16:29:46 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.32 2009/09/18 17:07:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -149,7 +149,7 @@ corresponding limit on the tensor-scalar ratio by noting from
 the definition (\ref{eq:epsdefn-dbiintro})
 that $\dot{\varphi}^2 /\Mpl^2 = 2\epsilon_H H^2/P_{,X}$.
 This implies that the variation of the inflaton field 
-is given by the Lyth bound 
+is given by the Lyth bound \eq{eq:genlyth-dbiintro} 
 \cite{lyth,bmpaper}
 % 
 \begin{equation}
@@ -159,7 +159,8 @@ is given by the Lyth bound
 \end{equation}
 % 
 where $\N$ is the number of e-foldings as defined in \eq{eq:nefolddefn-intro}. 
-Since the field value during observable inflation $\varphi_* < \varphi_{UV}$,
+Since $\vp_*$, the field value during observable inflation,  is
+less than $\varphi_{UV}$
 this results in an upper bound on the observable tensor-scalar ratio
 \cite{bmpaper}: 
 % 
@@ -168,11 +169,13 @@ this results in an upper bound on the observable tensor-scalar ratio
 r_*  < \frac{32}{N (\Neff)^2} \,,
 \end{equation}
 % 
-where the effective number of e-foldings $\Neff \equiv 
-\int^{\N_{\mathrm{end}}}_0 d \N (r/r_*)^{1/2}$ 
+where the effective number of e-foldings $\Neff$ defined in
+\eq{eq:Neff-dbiintro} 
 is a model-dependent parameter that quantifies 
-how $r$ varies during the final stages of inflation. If $r$ is constant during
-inflation then $\Neff = \N_\mathrm{end}$.
+how $r$ varies during the final stages of inflation. As $c_s\PX = 1$ in the
+standard DBI model, if $r$ is constant during
+inflation then $\Neff = \N_\mathrm{end}$, the total number of e-foldings of
+inflation.
 
 
 Typically, one expects $30 \, \lsim \, {\Neff} 
@@ -251,7 +254,7 @@ yields the upper limit
 \label{eq:boundpower6}
 \left( \frac{\Delta \varphi}{\Mpl} \right)^6_{*} 
 < \frac{\pi^3}{16\mathrm{Vol}(X_5)} r^2 \Pr 
-\left( 1- \frac{1}{3\fnl} \right)  \,.
+\left( 1- \frac{1}{3\fnleq} \right)  \,.
 \end{equation}
 % 
 Hence, employing the Lyth bound \eqref{eq:rtheory} in the form
@@ -262,14 +265,14 @@ results in a very general upper limit on the tensor-scalar ratio:
 \begin{equation}
 \label{eq:generalbound}
 r_{*} < \frac{32 \pi^3}{(\Delta \N_*)^6 \mathrm{Vol}(X_5)} 
-\Pr \left( 1- \frac{1}{3\fnl} \right) \,.
+\Pr \left( 1- \frac{1}{3\fnleq} \right) \,.
 \end{equation}
 % 
 
 
 Condition (\ref{eq:generalbound}) is 
 only weakly dependent on the level of non-Gaussianity 
-when $\fnl < -5$ and we may therefore neglect the 
+when $\fnleq < -5$ and we may therefore neglect the 
 factor involving this parameter. 
 Substituting the WMAP5 normalization 
 $\Pr \simeq 2.5 \times 10^{-9}$ then implies that
@@ -398,16 +401,16 @@ by defining the `tilt' of the non-linearity parameter  \cite{brane14}:
 % 
 \begin{equation}
 \label{eq:nnl-defn-dbi}
-\nnl \equiv \frac{\d \ln |\fnl|}{\d\ln k}\,. 
+\nnl \equiv \frac{\d \ln |\fnleq|}{\d\ln k}\,. 
 \end{equation}
 % 
-This implies that $s=  3 \fnl \nnl /[2(1-3\fnl)]$ and     
+This implies that $s=  3 \fnleq \nnl /[2(1-3\fnleq)]$ and     
 substitution of Eqs.~(\ref{indices})--(\ref{eq:fnlcs-dbiintro}) 
 into \eq{eq:nsconstraint} then yields
 % 
 \begin{equation}
 \label{eq:obscon1}
-1-n_s = \frac{r}{4} \sqrt{1-3\fnl} + \frac{\nnl}{1-3\fnl}
+1-n_s = \frac{r}{4} \sqrt{1-3\fnleq} + \frac{\nnl}{1-3\fnleq}
 \mp \sqrt{\frac{r}{8}} \left( \frac{T_{,\vp}}{T} \Mpl \right)_*  \,.
 \end{equation}
 % 
@@ -416,12 +419,12 @@ into \eq{eq:nsconstraint} then yields
 In \Rref{lidser2}, brane inflation near the tip of a KS-type 
 throat was considered, where the warped brane tension asymptotes to a 
 constant value. In this regime, \eq{eq:obscon1} reduces to 
-the condition $r \simeq 2.3 (1-n_s)/\sqrt{-\fnl}$ when $|\fnl|$ is 
+the condition $r \simeq 2.3 (1-n_s)/\sqrt{-\fnleq}$ when $|\fnleq|$ is 
 sufficiently large to be detectable by Planck, 
-\ie $|\fnl| > 5$. 
+\ie $|\fnleq| > 5$. 
 It then follows from the  
 WMAP5 best-fit value $n_s \simeq 0.968$ and lower limit 
-$\fnleq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
+$\fnleqeq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
 is bounded both from above and below such that $0.001 \, \lsim \, r 
 \, \lsim \, 0.01$. These bounds follow from 
 current WMAP5 limits on the spectral index and the 
@@ -442,7 +445,7 @@ which implies that
 % 
 \begin{equation}
 \label{eq:halfbound}
-\frac{r}{4} \sqrt{1-3\fnl} + \frac{\nnl}{1-3\fnl} 
+\frac{r}{4} \sqrt{1-3\fnleq} + \frac{\nnl}{1-3\fnleq} 
 > 1-n_s \,.
 \end{equation}
 % 
@@ -457,32 +460,32 @@ compatible with condition (\ref{eq:halfbound}) if
 % 
 \begin{equation}
 \label{eq:nnlbound}
-\nnl \simeq -2s > -3 (1-n_s ) \fnl > -0.078 \fnl \,.
+\nnl \simeq -2s > -3 (1-n_s ) \fnleq > -0.078 \fnleq \,.
 \end{equation}
 % 
-However, when $\fnl \ll -1$, this would violate the slow-roll conditions
+However, when $\fnleq \ll -1$, this would violate the slow-roll conditions
 that must be satisfied for a consistent 
 derivation of the perturbation spectra 
 (\ref{eq:spectra-dbiintro}). For example, the conservative 
 bound $|s| < 0.1$ with $1-n_s \simeq 0.05$ is violated if  
-$\fnl < {\cal{O}} (-5)$. 
+$\fnleq < {\cal{O}} (-5)$. 
 
 In view of this, let us consider the case where the tensor 
 perturbations are non-negligible. 
 The magnitude of the second term in condition (\ref{eq:halfbound}) 
-is suppressed by a factor of $(-\fnl)^{3/2} \gg 1$ 
+is suppressed by a factor of $(-\fnleq)^{3/2} \gg 1$ 
 relative to the first. This is expected to 
 be a significant effect in DBI inflation. 
 Consequently, 
-by saturating the WMAP5 limit $\fnleq > -151$, we arrive at 
+by saturating the WMAP5 limit $\fnleqeq > -151$, we arrive at 
 a lower bound on the tensor-scalar ratio which applies   
-to any model for which the ratio $|\nnl/\fnl|$ is 
+to any model for which the ratio $|\nnl/\fnleq|$ is 
 negligible:
 \addtodo{ Add working}
 % 
 \begin{equation}
 \label{eq:lowerbound}
-r_* >  \frac{4(1-n_s)}{\sqrt{-3\fnl}} > \frac{1-n_s}{6} \,.
+r_* >  \frac{4(1-n_s)}{\sqrt{-3\fnleq}} > \frac{1-n_s}{6} \,.
 \end{equation}
 % 
 This second bound requires $r > 0.005$ for the WMAP5 best-fit value 
@@ -615,7 +618,7 @@ generalizes to a constraint on the value of $f_1 (\varphi_*)$:
 \begin{equation}
 \label{eq:observef1}
 \left( \frac{f_1}{\Mpl^4} \right)_{*} \simeq \frac{\pi^2}{16} r^2\Pr
-\left( 1- \frac{1}{3\fnl} \right)  \,.
+\left( 1- \frac{1}{3\fnleq} \right)  \,.
 \end{equation}
 % 
 Finally, the expression for the scalar spectral index
@@ -625,8 +628,8 @@ is straightforward to show that
 %  
 \begin{equation}
 \label{eq:nsconstraintW}
-1-n_s = \frac{r}{4} \sqrt{1-3\fnl}
- +\frac{\nnl}{1-3\fnl} \mp \sqrt{\frac{r}{4f_1f_2}} \left( 
+1-n_s = \frac{r}{4} \sqrt{1-3\fnleq}
+ +\frac{\nnl}{1-3\fnleq} \mp \sqrt{\frac{r}{4f_1f_2}} \left( 
 \frac{f_{1,\vp}}{f_1} \Mpl \right)_*  \,.
 \end{equation}
 % 
@@ -708,7 +711,7 @@ that
 % 
 \begin{equation}
 \label{eq:evade}
-f_1f_2 > \frac{N (\Delta \N_*)^2 (1-n_s)}{4\sqrt{-3\fnl}} \,.
+f_1f_2 > \frac{N (\Delta \N_*)^2 (1-n_s)}{4\sqrt{-3\fnleq}} \,.
 \end{equation}
 % 
 
@@ -716,11 +719,11 @@ f_1f_2 > \frac{N (\Delta \N_*)^2 (1-n_s)}{4\sqrt{-3\fnl}} \,.
 In IR scenarios, however, the positive sign will apply in the 
 last term of the right-hand side of \eq{eq:nsconstraintW}.
 Hence, assuming $f_{1,\vp} >0$ and neglecting the term proportional to 
-$\nnl/\fnl$ yields an {\em upper} limit on the tensor-scalar ratio:
+$\nnl/\fnleq$ yields an {\em upper} limit on the tensor-scalar ratio:
 % 
 \begin{equation}
 \label{eq:IRupper}
-r_* < \frac{4(1-n_s)}{\sqrt{-3\fnl}}  \,.
+r_* < \frac{4(1-n_s)}{\sqrt{-3\fnleq}}  \,.
 \end{equation}
 % 
 Combining conditions (\ref{eq:f2bound}) and (\ref{eq:IRupper}) 
@@ -730,7 +733,7 @@ for the generalized BM bound to be satisfied in IR inflation:
 \begin{equation}
 \label{eq:f2IRlower}
 \frac{f_2\Mpl^4}{N} > \frac{\sqrt{3} (\Delta \N_*)^2}{4\pi^2}
-\frac{\sqrt{-\fnl}}{(1-n_s)\Pr}  \,.
+\frac{\sqrt{-\fnleq}}{(1-n_s)\Pr}  \,.
 \end{equation}
 % 
 
