Fixed duplicated fnleqq

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.33 2009/09/18 17:08:37 ith Exp $
+% $Id: dbi.tex,v 1.34 2009/09/18 17:13:46 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.33 2009/09/18 17:08:37 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.34 2009/09/18 17:13:46 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -424,7 +424,7 @@ sufficiently large to be detectable by Planck,
 \ie $|\fnleq| > 5$. 
 It then follows from the  
 WMAP5 best-fit value $n_s \simeq 0.968$ and lower limit 
-$\fnleqeq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
+$\fnleq > -151$ \cite{Komatsu:2008hk} that the gravitational wave amplitude 
 is bounded both from above and below such that $0.001 \, \lsim \, r 
 \, \lsim \, 0.01$. These bounds follow from 
 current WMAP5 limits on the spectral index and the 
@@ -477,7 +477,7 @@ is suppressed by a factor of $(-\fnleq)^{3/2} \gg 1$
 relative to the first. This is expected to 
 be a significant effect in DBI inflation. 
 Consequently, 
-by saturating the WMAP5 limit $\fnleqeq > -151$, we arrive at 
+by saturating the WMAP5 limit $\fnleq > -151$, we arrive at 
 a lower bound on the tensor-scalar ratio which applies   
 to any model for which the ratio $|\nnleq/\fnleq|$ is 
 negligible:
