--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.12 2009/09/16 13:01:57 ith Exp $
+% $Id: ihmacros.sty,v 1.13 2009/09/18 17:45:49 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -56,6 +56,7 @@
 \newcommand{\fnlloc}{\ensuremath{\fnl^\mathrm{loc}}}
 \newcommand{\fnleq}{\ensuremath{\fnl^{\mathrm{eq}}}}
 \newcommand{\nnl}{\ensuremath{n_{\mathrm{NL}}}}
+\newcommand{\nnleq}{\ensuremath{\nnl^{\mathrm{eq}}}}
 \newcommand{\tnl}{\tau_{\mathrm{NL}}}
 % 
 % Scientific notation
